--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -1,91 +1,129 @@
-##################################################
-# 核心系统
-##################################################
-CONFIG_MODULES=y
+CONFIG_TARGET_x86=y
+CONFIG_TARGET_x86_64=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-# Cgroup 必备（Docker）
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_DEVICE=y
-CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_SCHED=y
-CONFIG_KERNEL_CGROUP_PIDS=y
-CONFIG_KERNEL_CPUSETS=y
-CONFIG_KERNEL_NAMESPACES=y
-CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
-CONFIG_DOCKER_CGROUP_OPTIONS=y
+# CPU 优化
+CONFIG_TARGET_OPTIMIZATION="-O2 -pipe"
+CONFIG_CPU_TYPE="generic"
 
-CONFIG_IPV6=y
-CONFIG_PACKAGE_busybox=y
-CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_opkg=y
+# RootFS
+CONFIG_TARGET_ROOTFS_EXT4FS=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_KERNEL_PARTSIZE=64
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=128
 
-##################################################
-# LuCI 最小界面
-##################################################
+########################################
+# LuCI
+########################################
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_luci-lib-ip=y
-CONFIG_PACKAGE_luci-lib-jsonc=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+CONFIG_PACKAGE_luci-compat=y
 
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh-cn=y
+########################################
+# Basic Networking
+########################################
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_pppoe=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
 
-##################################################
-# 网络与 IPv6
-##################################################
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_dhcp6c=y
-
-##################################################
-# Docker / 容器
-##################################################
-CONFIG_PACKAGE_docker=y
+########################################
+# Docker
+########################################
 CONFIG_PACKAGE_dockerd=y
-CONFIG_PACKAGE_containerd=y
-CONFIG_PACKAGE_luci-lib-docker=y
-CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_docker-compose=y
+CONFIG_PACKAGE_kmod-fs-overlay=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
 
-##################################################
-# Passwall 完整依赖（最少集）
-##################################################
-CONFIG_PACKAGE_luci-app-passwall=y
+########################################
+# Filesystems
+########################################
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
 
-# 关键依赖：必须，否则编译失败
-CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_haproxy-pcre=y
-CONFIG_PACKAGE_libpcre=y
-CONFIG_PACKAGE_libpcre2=y
+########################################
+# ACPI / Power
+########################################
+CONFIG_PACKAGE_acpid=y
+CONFIG_PACKAGE_kmod-acpi-button=y
+CONFIG_PACKAGE_kmod-acpi-fan=y
+CONFIG_PACKAGE_kmod-acpi-processor=y
+CONFIG_PACKAGE_kmod-acpi-cpu-hotplug=y
 
-# Passwall 必须的代理核心（至少开一个）
-CONFIG_PACKAGE_xray-core=y
-# CONFIG_PACKAGE_sing-box is not set （如果你想开可以加）
+########################################
+# Network Drivers（最稳 & 最常用）
+########################################
+CONFIG_PACKAGE_kmod-e1000=y
+CONFIG_PACKAGE_kmod-e1000e=y
+CONFIG_PACKAGE_kmod-igb=y
+CONFIG_PACKAGE_kmod-r8169=y
+CONFIG_PACKAGE_kmod-ixgbe=y
 
-# Passwall 的 DNS / 辅助
-CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_v2ray-geodata=y
+########################################
+# 禁用显卡驱动（节省时间 + 避免失败）
+########################################
+CONFIG_PACKAGE_kmod-drm=n
+CONFIG_PACKAGE_kmod-drm-i915=n
+CONFIG_PACKAGE_kmod-drm-radeon=n
+CONFIG_PACKAGE_kmod-drm-amdgpu=n
+CONFIG_PACKAGE_kmod-fb=n
+CONFIG_PACKAGE_kmod-backlight=n
 
-##################################################
-# SmartDNS / Socat
-##################################################
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-socat=y
+########################################
+# 统一 OpenSSL，避免冲突
+########################################
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_libustream-mbedtls=n
+CONFIG_PACKAGE_wolfssl=n
+CONFIG_PACKAGE_mbedtls=n
 
-##################################################
-# 基础工具（文件系统 / 压缩 / 存储）
-##################################################
-CONFIG_PACKAGE_tar=y
-CONFIG_PACKAGE_unzip=y
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_parted=y
+########################################
+# Lua（只保留 5.3）
+########################################
+CONFIG_PACKAGE_lua5.3=y
+CONFIG_PACKAGE_lua5.1=n
+CONFIG_PACKAGE_lua5.4=n
 
-##################################################
-# 优化
-##################################################
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
-CONFIG_ZSTD_OPTIMIZE_O3=y
+########################################
+# SSR+
+########################################
+CONFIG_FEED_passwall2=y
+
+
+########################################
+# DNS: MosDNS（推荐）
+########################################
+CONFIG_PACKAGE_mosdns=y
+CONFIG_PACKAGE_luci-app-mosdns=y
+
+########################################
+# IPv6 全套
+########################################
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_kmod-ipv6=y
+
+########################################
+# Firewall: 使用 nftables（标准）
+########################################
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_fw4=y
+CONFIG_PACKAGE_iptables=n
+CONFIG_PACKAGE_iptables-legacy=n
+
+########################################
+# BusyBox（默认最稳）
+########################################
+CONFIG_BUSYBOX_DEFAULT_HAVE_DOT_CONFIG=y
+CONFIG_BUSYBOX_DEFAULT_FEATURE_SH_IS_NONE=y
