--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -22,7 +22,7 @@ env:
   REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
   REPO_BRANCH: v24.10.3
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/diy.config
+  #EXTERNAL_FILE: configs/luci/diy.config
   CONFIG_FILE: configs/x86_64.config
   SYS_CONF_SH: configure.sh
   PACKS: package.sh
