--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -162,7 +162,7 @@ jobs:
         run: |
           cd $WORKDIR/openwrt
           echo "$(nproc) thread compile"
-          make -j$(nproc) V=s || make -j4 V=s
+          make -j$(nproc) V=s > /dev/null || make -j4 V=s > /dev/null
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
