--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -18,7 +18,7 @@ on:
   repository_dispatch:
 
 env:
-  OPNAME: 'x86_64Lite'
+  OPNAME: 'x86_64diy'
   REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
   REPO_BRANCH: v24.10.3
   FEEDS_CONF: feeds.conf.default
