--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           sudo rm -rf /etc/apt/sources.list.d/*
           sudo -E apt-get -qq update
+          sudo -E apt-get -qq install libpcre3-dev
           sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
