--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -3,19 +3,19 @@ CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_LUCI_LANG_zh-tw=y
 
 #CONFIG# 启用的包
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-app-quickstart=y
-CONFIG_PACKAGE_luci-app-netwizard=y
-CONFIG_PACKAGE_luci-app-webadmin=y
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-socat=y
+#CONFIG_PACKAGE_luci-app-quickstart=y
+#CONFIG_PACKAGE_luci-app-netwizard=y
+#CONFIG_PACKAGE_luci-app-webadmin=y
 
 # 启用的中文语言包
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
 # 注释掉暂时不需要的包
