--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -5,10 +5,10 @@ CONFIG_LUCI_LANG_zh-tw=y
 #CONFIG# 启用的包
 #CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_luci-app-smartdns=y
-#CONFIG_PACKAGE_luci-app-socat=y
-#CONFIG_PACKAGE_luci-app-quickstart=y
-#CONFIG_PACKAGE_luci-app-netwizard=y
-#CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-netwizard=y
+CONFIG_PACKAGE_luci-app-webadmin=y
 
 # 启用的中文语言包
 #CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
