--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -12,9 +12,9 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 
 # 启用的中文语言包
 #CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
