--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -9,8 +9,8 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 
 
 #CONFIG# 启用的包
-#CONFIG_PACKAGE_luci-app-passwall=y
-#CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-smartdns=y
 
 
 # 启用的中文语言包
