--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -19,9 +19,9 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 #CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
 # 注释掉暂时不需要的包
-#//CONFIG_PACKAGE_luci-app-tailscale=y
-#//CONFIG_PACKAGE_luci-app-partexp=y
-#//CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-partexp=y
+CONFIG_PACKAGE_luci-app-store=y
 # CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
