--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -1,6 +1,8 @@
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_LUCI_LANG_zh-tw=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
+
 
 #CONFIG# 启用的包
 #//CONFIG_PACKAGE_luci-app-passwall=y
