--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -14,23 +14,23 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 
 # 启用的中文语言包
 #CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-#CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
 # 注释掉暂时不需要的包
 CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-partexp=y
 CONFIG_PACKAGE_luci-app-store=y
 # CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
 
 
 CONFIG_TARGET_x86=y
