--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -8,12 +8,14 @@ CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-netwizard=y
 CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-tailscale=y
 
 
 #CONFIG# 启用的包
 #CONFIG_PACKAGE_luci-app-passwall=y
 #CONFIG_PACKAGE_luci-app-smartdns=y
-
+#CONFIG_FEED_passwall2=y
 
 # 启用的中文语言包
 #CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
@@ -24,9 +26,9 @@ CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
 # 注释掉暂时不需要的包
-CONFIG_PACKAGE_luci-app-tailscale=y
+
 #CONFIG_PACKAGE_luci-app-partexp=y
-CONFIG_PACKAGE_luci-app-store=y
+
 # CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
@@ -136,10 +138,7 @@ CONFIG_PACKAGE_lua5.3=y
 CONFIG_PACKAGE_lua5.1=n
 CONFIG_PACKAGE_lua5.4=n
 
-########################################
-# SSR+
-########################################
-CONFIG_FEED_passwall2=y
+
 
 
 ########################################
