--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -1,7 +1,7 @@
 
 
 #CONFIG# 启用的包
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 #//CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-quickstart=y
@@ -25,7 +25,7 @@ CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 
 # 注释掉暂时不需要的包
 
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
 
