--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -8,7 +8,7 @@ CONFIG_PACKAGE_luci-app-tailscale=y
 
 
 #CONFIG# 启用的包
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 #CONFIG_FEED_passwall2=y
 
@@ -24,7 +24,7 @@ CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 
 #CONFIG_PACKAGE_luci-app-partexp=y
 
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
