更新 x86_64Lite.yml

--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -18,7 +18,7 @@ on:
 env:
   OPNAME: 'x86_64Lite'
   REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: main
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   EXTERNAL_FILE: configs/luci/Lite.config
   CONFIG_FILE: configs/x86_64.config
