--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -7,6 +7,8 @@ CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-partexp=y
 CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+CONFIG_PACKAGE_luci-theme-kucat=y
 
 # 启用的中文语言包
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
