更新 x86_64Lite.yml

--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -78,6 +78,13 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
+      - name: 修改 feeds.conf.default 文件
+        run: |
+          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" | sudo tee -a $GITHUB_WORKSPACE/openwrt/feeds.conf.default
+          echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;main" | sudo tee -a $GITHUB_WORKSPACE/openwrt/feeds.conf.default
+          echo "src-git geoview https://github.com/xiaorouji/openwrt-geoview.git;main" | sudo tee -a $GITHUB_WORKSPACE/openwrt/feeds.conf.default
+          echo "src-git tailscale_lanrat https://github.com/lanrat/openwrt-tailscale-repo.git" | sudo tee -a $GITHUB_WORKSPACE/openwrt/feeds.conf.default
+
       # 5. 更新 feeds
       - name: 更新并安装 feeds
         run: |
