--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -1,4 +1,4 @@
-name: x86_64 OpenWrt 编译
+name: x86_64 OpenWrt
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
       lan_ip:
         description: '默认 LAN IP 地址'
         required: true
-        default: '192.168.100.1'
+        default: '192.168.100.11'
       pppoe_user:
         description: 'PPPoE 用户名'
         required: true
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/Standard.config
+  EXTERNAL_FILE: configs/luci/Lite.config
   CONFIG_FILE: configs/x86_64.config
   SYS_CONF_SH: configure.sh
   PACKS: package.sh
@@ -36,15 +36,11 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      #-------------------------------------------------------------
       # 1. 检出仓库
-      #-------------------------------------------------------------
       - name: 检出仓库
         uses: actions/checkout@v4
 
-      #-------------------------------------------------------------
-      # 2. 初始化系统环境并安装依赖
-      #-------------------------------------------------------------
+      # 2. 初始化系统环境
       - name: 初始化系统环境
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -57,7 +53,6 @@ jobs:
           sudo timedatectl set-timezone "$TZ"
           sudo mkdir -p $WORKDIR
           sudo chown $USER:$GROUPS $WORKDIR
-          # 释放磁盘空间
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
           df -hT
@@ -65,18 +60,14 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-      #-------------------------------------------------------------
       # 3. 克隆 OpenWrt 源码
-      #-------------------------------------------------------------
       - name: 克隆 OpenWrt 源码
         working-directory: ${{ env.WORKDIR }}
         run: |
           git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
           ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
 
-      #-------------------------------------------------------------
       # 4. 使用 cache 加速编译
-      #-------------------------------------------------------------
       - name: 缓存编译
         uses: stupidloud/cachewrtbuild@main
         with:
@@ -87,9 +78,8 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-      #-------------------------------------------------------------
+
       # 5. 更新 feeds
-      #-------------------------------------------------------------
       - name: 更新并安装 feeds
         run: |
           cd $WORKDIR/openwrt
@@ -99,12 +89,7 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-
-
-
-      #-------------------------------------------------------------
       # 6. 自定义 feeds 和脚本
-      #-------------------------------------------------------------
       - name: 加载自定义 feeds 和脚本
         run: |
           cd $WORKDIR/openwrt
@@ -112,9 +97,7 @@ jobs:
           chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
           bash $GITHUB_WORKSPACE/$SYS_CONF_SH
 
-      #-------------------------------------------------------------
       # 7. 加载自定义配置和 package.sh
-      #-------------------------------------------------------------
       - name: 加载自定义配置和 package.sh
         run: |
           cd $WORKDIR/openwrt
@@ -123,44 +106,27 @@ jobs:
           chmod +x $GITHUB_WORKSPACE/$PACKS
           bash $GITHUB_WORKSPACE/$PACKS
 
-      #-------------------------------------------------------------
       # 8. 自动注入 LAN IP + PPPoE 信息
-      #-------------------------------------------------------------
       - name: 自动注入 LAN IP 和 PPPoE
         run: |
           mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
           printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192.168.1.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'sed -i "s/192.168.100.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
 
-      #-------------------------------------------------------------
-      #-------------------------------------------------------------
-      # 8.1 自动设置 root 密码
-      #-------------------------------------------------------------
-      - name: 自动设置 root 密码
-        run: |
-          mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
-          printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-password
-          # 使用 passwd 命令生成 hash 并写入 shadow
-          printf 'echo "root:password" | chpasswd\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-password
-          printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-password
-
-      # 9. 扩展驱动
-      #-------------------------------------------------------------
+      # 9. 扩展驱动（Lite 不启用）
       - name: 扩展驱动
         if: env.EXTEND_DRIVER == 'true'
         run: |
           cd $WORKDIR/openwrt
           cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
 
-      #-------------------------------------------------------------
       # 10. 最终修改配置
-      #-------------------------------------------------------------
       - name: 修改最终配置
         run: |
           cd $WORKDIR/openwrt
@@ -169,9 +135,19 @@ jobs:
           sed -i '/CONFIG_DEFAULT_luci/d' .config
           cat .config
 
-      #-------------------------------------------------------------
+      # 10.5 输出并保存最终 .config
+      - name: 输出并保存最终 .config
+        run: |
+          cd $WORKDIR/openwrt
+          echo "======== 当前 OpenWrt 配置 ========"
+          cat .config
+          echo "==================================="
+          # 保存备份文件到 workdir，带时间戳
+          cp .config $WORKDIR/openwrt/.config_backup_$(date +'%Y%m%d%H%M%S')
+          echo "已保存 .config 备份文件"
+
+
       # 11. 下载 dl 包
-      #-------------------------------------------------------------
       - name: 下载依赖包
         run: |
           cd $WORKDIR/openwrt
@@ -181,9 +157,7 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-      #-------------------------------------------------------------
       # 12. 编译固件
-      #-------------------------------------------------------------
       - name: 编译 OpenWrt 固件
         id: compile
         run: |
@@ -191,13 +165,10 @@ jobs:
           echo "$(nproc) thread compile"
           make -j$(nproc) V=s || make -j4 V=s
           echo "status=success" >> $GITHUB_OUTPUT
-          grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
-          [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
+          echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
 
-      #-------------------------------------------------------------
       # 13. 清理编译缓存
-      #-------------------------------------------------------------
       - name: 清理编译缓存
         if: steps.compile.outputs.status == 'success'
         run: |
@@ -205,9 +176,7 @@ jobs:
           rm -rf build_dir staging_dir tmp bin/packages .ccache
           df -hT
 
-      #-------------------------------------------------------------
       # 14. 上传 bin 目录（可选）
-      #-------------------------------------------------------------
       - name: 上传 bin 目录
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
@@ -215,9 +184,7 @@ jobs:
           name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
           path: $WORKDIR/openwrt/bin
 
-      #-------------------------------------------------------------
       # 15. 整理固件目录
-      #-------------------------------------------------------------
       - name: 整理固件目录
         id: organize
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
@@ -227,9 +194,7 @@ jobs:
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
 
-      #-------------------------------------------------------------
       # 16. 上传固件到 Artifact
-      #-------------------------------------------------------------
       - name: 上传固件到 Artifact
         uses: actions/upload-artifact@main
         if: steps.organize.outputs.status == 'success'
@@ -237,9 +202,7 @@ jobs:
           name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
           path: ${{ env.FIRMWARE }}
 
-      #-------------------------------------------------------------
       # 17. 生成 Release tag
-      #-------------------------------------------------------------
       - name: 生成 Release tag
         id: tag
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
@@ -248,16 +211,12 @@ jobs:
           touch release.txt
           echo "status=success" >> $GITHUB_OUTPUT
 
-      #-------------------------------------------------------------
       # 18. Release 内容生成
-      #-------------------------------------------------------------
       - name: 生成 Release 内容
         run: |
           echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
 
-      #-------------------------------------------------------------
       # 19. 上传固件到 Release
-      #-------------------------------------------------------------
       - name: 上传固件到 Release
         uses: softprops/action-gh-release@v1
         if: steps.tag.outputs.status == 'success'
