--- a/.github/workflows/diy.yml
+++ b/.github/workflows/diy.yml
@@ -1,5 +1,4 @@
-name: x86_64 OpenWrt diy
-
+name: x86_64 OpenWrt im
 on:
   workflow_dispatch:
     inputs:
@@ -18,11 +17,13 @@ on:
   repository_dispatch:
 
 env:
-  OPNAME: 'x86_64diy'
-  REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
-  REPO_BRANCH: v24.10.3
+  OPNAME: 'x86_64im'
+	 # 改为 ImmortalWrt 源（im 的）
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  # 使用 openwrt-24.10 分支（对应 OpenWrt 24.10，内核 6.6）
+  REPO_BRANCH: openwrt-24.10
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/diy.config
+  EXTERNAL_FILE: configs/luci/Lite.config
   CONFIG_FILE: configs/x86_64.config
   SYS_CONF_SH: configure.sh
   PACKS: package.sh
@@ -49,7 +50,6 @@ jobs:
         run: |
           sudo rm -rf /etc/apt/sources.list.d/*
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install libpcre3-dev
           sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
@@ -80,6 +80,7 @@ jobs:
 
       - name: 检查磁盘空间
         run: df -hT
+
 
       # 5. 更新 feeds
       - name: 更新并安装 feeds
@@ -114,7 +115,7 @@ jobs:
           mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
           printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192.168.1.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'sed -i "s/192.168.100.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
@@ -126,7 +127,7 @@ jobs:
         if: env.EXTEND_DRIVER == 'true'
         run: |
           cd $WORKDIR/openwrt
-         # cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
+          cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
 
       # 10. 最终修改配置
       - name: 修改最终配置
@@ -142,9 +143,11 @@ jobs:
         run: |
           cd $WORKDIR/openwrt
           echo "======== 当前 OpenWrt 配置 ========"
-          grep -v '^#' .config | grep -v '^$'   # 去掉注释和空行
+          cat .config
           echo "==================================="
-
+          # 保存备份文件到 workdir，带时间戳
+          cp .config $WORKDIR/openwrt/.config_backup_$(date +'%Y%m%d%H%M%S')
+          echo "已保存 .config 备份文件"
 
 
       # 11. 下载 dl 包
@@ -163,7 +166,7 @@ jobs:
         run: |
           cd $WORKDIR/openwrt
           echo "$(nproc) thread compile"
-          make -j$(nproc) V=s > /dev/null || make -j4 V=s > /dev/null
+          make -j$(nproc) V=s || make -j4 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
