--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -10,6 +10,9 @@ CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-kucat-config=y
 CONFIG_PACKAGE_luci-theme-kucat=y
 
+CONFIG_FEED_passwall_packages=y
+CONFIG_FEED_passwall_luci=y
+
 # 启用的中文语言包
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
