--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -136,6 +136,46 @@ jobs:
           make defconfig
           sed -i '/CONFIG_DEFAULT_luci/d' .config
           cat .config
+      
+      
+      # 10.1 强制启用 Passwall & Passwall2，禁用 SSR+
+      - name: 强制写入 Passwall 配置，并禁用 SSR+
+        run: |
+          cd $WORKDIR/openwrt
+
+          echo ">>> 强制启用 Passwall / Passwall2"
+          enable_items=(
+              CONFIG_PACKAGE_luci-app-passwall
+              CONFIG_PACKAGE_passwall
+              CONFIG_PACKAGE_luci-app-passwall2
+              CONFIG_PACKAGE_passwall2
+              CONFIG_PACKAGE_sing-box
+              CONFIG_PACKAGE_xray-core
+              CONFIG_PACKAGE_v2ray-geodata
+              CONFIG_PACKAGE_chinadns-ng
+              CONFIG_PACKAGE_naiveproxy
+          )
+          for item in "${enable_items[@]}"; do
+              sed -i "/${item}/d" .config
+              echo "${item}=y" >> .config
+          done
+
+          echo ">>> 禁用 SSR Plus"
+          disable_items=(
+              CONFIG_PACKAGE_luci-app-ssr-plus
+              CONFIG_PACKAGE_ssr-plus
+              CONFIG_PACKAGE_shadowsocksr-libev
+              CONFIG_PACKAGE_shadowsocksr-libev-ssr-local
+              CONFIG_PACKAGE_shadowsocksr-libev-ssr-server
+          )
+          for item in "${disable_items[@]}"; do
+              sed -i "/${item}/d" .config
+              echo "# ${item} is not set" >> .config
+          done
+
+          echo ">>> 最终 Passwall / SSR+ 配置已强制写入（不会再被 defconfig 覆盖）"
+          cat .config
+
 
       # 10.5 输出并保存最终 .config
       - name: 输出并保存最终 .config
