--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -24,7 +24,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   EXTERNAL_FILE: configs/luci/Lite.config
   CONFIG_FILE: configs/x86_64.config
-  SYS_CONF_SH: configurenew.sh
+  SYS_CONF_SH: configure.sh
   PACKS: package.sh
   EXTEND_DRIVER: false
   UPLOAD_BIN_DIR: false
