--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -1,3 +1,31 @@
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-netwizard=y
+CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-partexp=y
+CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+CONFIG_PACKAGE_luci-theme-kucat=y
+
+CONFIG_FEED_passwall_packages=y
+CONFIG_FEED_passwall_luci=y
+
+# 启用的中文语言包
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+
 # ========== 核心系统组件 ==========
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
