--- a/.github/workflows/immortalwrt.yml
+++ b/.github/workflows/immortalwrt.yml
@@ -59,6 +59,17 @@ jobs:
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
           df -hT
+              # Install Go if not installed
+          if ! command -v go &>/dev/null; then
+          echo "Go not found, installing..."
+            sudo apt-get -qq install golang-go
+          else
+            echo "Go is already installed"
+          fi
+
+          # Check Go version
+          go version
+
 
       - name: 检查磁盘空间
         run: df -hT
