--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -26,6 +26,10 @@ CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 
+#软件空间大小
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+
+
 # ========== 核心系统组件 ==========
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
