--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -25,3 +25,8 @@ CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+
+
+
+#软件空间大小
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
