--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -1,4 +1,4 @@
-name: x86_64 OpenWrt lite
+name: x86_64 OpenWrt Lite
 
 on:
   workflow_dispatch:
@@ -22,9 +22,9 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/Lite.config
+  EXTERNAL_FILE: configs/luci/diy.config
   CONFIG_FILE: configs/x86_64.config
-  SYS_CONF_SH: configure.sh
+  SYS_CONF_SH: configurenew.sh
   PACKS: package.sh
   EXTEND_DRIVER: false
   UPLOAD_BIN_DIR: false
