--- a/.github/workflows/passwall.yml
+++ b/.github/workflows/passwall.yml
@@ -123,8 +123,33 @@ jobs:
       - name: 编译 Passwall 包
         run: |
           cd $WORKDIR/openwrt
-          make package/feeds/passwall/luci-app-passwall/compile V=s
+
+          # 确保设置必要的配置
+          echo "CONFIG_ALL_NONSHARED=n" > .config
+          echo "CONFIG_ALL_KMODS=n" >> .config
+          echo "CONFIG_ALL=n" >> .config
+          echo "CONFIG_AUTOREMOVE=n" >> .config
+          echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
+          echo "CONFIG_PACKAGE_luci-app-passwall=m" >> .config
+
+          # 使用 make defconfig 确保正确加载配置
+          make defconfig
+
+          # 清理旧的编译文件
+          make package/feeds/passwall/luci-app-passwall/clean
+
+          # 编译 Passwall 包
+          echo "开始编译 luci-app-passwall..."
+          make package/feeds/passwall/luci-app-passwall/compile -j$(nproc) V=s
+
+          # 将编译结果移到 upload 目录
+          mkdir -p upload
+          mv bin/packages/*/passwall/luci-* upload/
+
+          # 输出成功信息并保存路径
+          cd upload
           echo "status=success" >> $GITHUB_OUTPUT
+          echo "FIRMWARE=$PWD" >> $GITHUB_ENV
 
       # 11. 上传 Passwall 包到 Artifact
       - name: 上传 Passwall .ipk 包
