--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -26,6 +26,7 @@ CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 
+
 #软件空间大小
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
@@ -427,3 +428,5 @@ CONFIG_PACKAGE_i915-firmware-guc=y
 CONFIG_PACKAGE_i915-firmware-huc=y
 CONFIG_PACKAGE_intel-microcode=y
 CONFIG_PACKAGE_mt7921bt-firmware=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
+
