--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -428,5 +428,4 @@ CONFIG_PACKAGE_i915-firmware-guc=y
 CONFIG_PACKAGE_i915-firmware-huc=y
 CONFIG_PACKAGE_intel-microcode=y
 CONFIG_PACKAGE_mt7921bt-firmware=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
-
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
