--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -2,7 +2,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
 CONFIG_PACKAGE_luci-app-quickstart=y
-CONFIG_PACKAGE_luci-app-netwizard=y
+#CONFIG_PACKAGE_luci-app-netwizard=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-partexp=y
@@ -17,7 +17,7 @@ CONFIG_FEED_passwall_luci=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
