--- a/configs/luci/im.config
+++ b/configs/luci/im.config
@@ -1,9 +1,9 @@
-CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y      # DDNS Go语言包
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y         # UPnP语言包
-CONFIG_PACKAGE_luci-i18n--samba4-zh-cn=y # 网络共享语言包
-CONFIG_PACKAGE_luci-app-ddn-go=y            # DDNS功能
-CONFIG_PACKAGE_luci-app-upnp=y                # UPnP支持
-CONFIG_PACKAGE_luci-app-samba4=y       # 网络共享
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n--samba4-zh-cn=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_luci-app-upnp=y
+#CONFIG_PACKAGE_luci-app-samba4=y
 
 
 
