--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,6 +79,13 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
+      # 4. 启动 SSH 连接 (tmate) 如果用户选择启用
+      - name: 启动 SSH 连接
+        if: ${{ inputs.ssh == 'true' }}
+        uses: mxschmitt/action-tmate@v3.13
+
+
+
       # 3. 克隆 OpenWrt 源码
       - name: 克隆 OpenWrt 源码
         working-directory: ${{ env.WORKDIR }}
